UI bug for title alignmnet and labels fonts issue fixed

--- a/ui.frontend/src/main/webpack/etisalat/styles/wst-form.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/wst-form.scss
@@ -11,6 +11,15 @@
       font-size: $font16;
       z-index: 2;
     }
+      
+    #description + label, #justification + label {
+      color: $almost-black;
+      transform: translateY(10px) scale(.8);
+      font-size: $font16;
+      z-index: 2;
+    }
+     
+    
   }
   .cmp-form-options--drop-down {
       position: relative;
@@ -1312,16 +1321,8 @@
 .cws-form .has-error-fields textarea ~label {
   transform: translateY(10px) scale(.8);
 }
-.desc-text {
-  .is-valid {   
-    ~label {
-      color: $almost-black;
-      transform: translateY(10px) scale(.8);
-      font-size: $font16;
-      z-index: 2;
-    }
-  }
-} 
+
+
 #justification + label {
   padding-left: toRem(10);
   padding-top: toRem(10);
